<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/action_language"-->
<!--        android:icon="@drawable/ic_baseline_language_24"-->
<!--        android:title="@string/action_clear_title"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_baseline_clear_all_24"
        android:title="@string/action_clear_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/ic_baseline_stop_24"
        android:title="@string/action_stop_title"
        app:showAsAction="ifRoom" />
</menu>